<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentDashboard">

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_rect_round"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="8dp"
        android:paddingBottom="2dp"
        android:text="@string/search_here"
        app:drawableEndCompat="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ic_logo"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:paddingVertical="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_articles"
                android:textSize="22sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/strawford_bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recent"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_marginTop="20dp"
                tools:itemCount="5"
                tools:listitem="@layout/rv_items_recents"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/black"
                android:paddingBottom="100dp"
                >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_connect"
                android:textSize="22sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/strawford_bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stay_update_with_my_latest_post_on_your_favorite_platforms"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/strawford_regular"
                />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_social_connect"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    />
            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
